# rae_gfx

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  rust.yml
examples/: example_app.rs  gioconda.rs  offscreen_rendering.rs  sprite.rs  triangle.rs  triangles.rs
src/: lib.rs
src/canvas/: canvas.rs  canvas_window.rs  mod.rs
src/core/: buffer.rs  canvas.rs  canvas_texture.rs  canvas_window.rs  color.rs  command_sequence.rs  error.rs  geometry2d_pipeline.rs  instance.rs  mesh.rs  mod.rs  pipeline.rs  render_frame.rs  renderer.rs  sampled_texture.rs  size.rs  spirv.rs  texture_format.rs
src/core/shaders/glsl/: geometry2d.vert
src/geometry/: mod.rs  orthographic2.rs
src/geometry2_rendering/: geometry2d_pipeline.rs  mod.rs
src/hal/: adapter.rs  backend.rs  buffer.rs  command_buffer.rs  command_pool.rs  descriptor_pool.rs  error.rs  fence.rs  framebuffer.rs  graphics_pipeline.rs  image.rs  image_view.rs  instance.rs  memory.rs  mod.rs  pipeline_cache.rs  semaphore.rs  surface.rs
src/halw/: adapter.rs  backend.rs  buffer.rs  command_buffer.rs  command_pool.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  entry_point.rs  fence.rs  framebuffer.rs  gpu.rs  graphics_pipeline.rs  graphics_pipeline_desc.rs  image.rs  image_view.rs  instance.rs  memory.rs  mod.rs  pipeline_cache.rs  pipeline_layout.rs  render_pass.rs  sampler.rs  semaphore.rs  shader_module.rs  subpass.rs  surface.rs
src/rendering/: buffer.rs  mod.rs  pipeline.rs
src/shaders/: mesh2d.spv
src/shape2/: shape2_renderer.rs
src/shape2/shaders/glsl/: shape2.vert
src/sprite/: sprite_renderer.rs
src/sprite/shaders/glsl/: sprite.frag
src/wgpu/: mod.rs
src/wgpu/core/: canvas_window.rs  device.rs  instance.rs  mod.rs
src/wgpu/geometry2/: mod.rs  pipeline.rs  render_pipeline.rs  vertex.rs
src/wgpu/geometry2/shaders/glsl/: geometry2.vert
src/window/: mod.rs
