[package]
name = "rae_gfx"
version = "0.1.0"
authors = ["Davide Corradi <davide.corradi.dev@gmail.com>"]
edition = "2018"

[dependencies]
rae_app = { git = "https://github.com/DavideCorradiDev/rae_app.git", tag = "v0.1.0" }
rae_math = { git = "https://github.com/DavideCorradiDev/rae_math.git", tag = "v0.1.1", features = [
    "serde-serialize"
] }
wgpu = { version = "0.6", features = ["trace", "replay"] }
raw-window-handle = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3" }
num-traits = { version = "0.2" }
bytemuck = { version = "1.4" }

[dev-dependencies]
galvanic-assert = "0.8"
rand = "0.7"

[build-dependencies]
rae_shader = { git = "https://github.com/DavideCorradiDev/rae_shader.git", tag = "v0.1.2" }

[[example]]
name = "triangles"
path = "examples/triangles.rs"

[[example]]
name = "sprite"
path = "examples/sprite.rs"
